2008-10-04	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb_bug39438-master.opt,
	mysql-test/innodb_bug39438.result, mysql-test/innodb_bug39438.test:
	Fix Bug#39438 Testcase for Bug#39436 crashes on 5.1 in
	fil_space_get_latch

2008-10-04	The InnoDB Team

	* include/lock0lock.h, lock/lock0lock.c,
	mysql-test/innodb_bug38231.result, mysql-test/innodb_bug38231.test,
	row/row0mysql.c:
	Fix Bug#38231 Innodb crash in lock_reset_all_on_table() on TRUNCATE +
	LOCK / UNLOCK

2008-10-04	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#35498 Cannot get table test/table1 auto-inccounter value in
	::info

2008-10-04	The InnoDB Team

	* handler/ha_innodb.cc, handler/ha_innodb.h:
	Fix Bug#37788 InnoDB Plugin: AUTO_INCREMENT wrong for compressed
	tables

2008-10-04	The InnoDB Team

	* dict/dict0dict.c, handler/ha_innodb.cc, handler/ha_innodb.h,
	include/dict0dict.h, include/dict0mem.h, row/row0mysql.c:
	Fix Bug#39830 Table autoinc value not updated on first insert

2008-10-03	The InnoDB Team

	* mysql-test/innodb-index.test, mysql-test/innodb-index.result,
	mysql-test/innodb-timeout.test, mysql-test/innodb-timeout.result,
	srv/srv0srv.c, include/srv0srv.h,
	handler/ha_innodb.cc, include/ha_prototypes.h:
	Fix Bug#36285 innodb_lock_wait_timeout is not dynamic, not per session

2008-09-19	The InnoDB Team

	* os/os0proc.c:
	Fix a memory leak on Windows. The memory leak was due to wrong
	parameters passed into VirtualFree() call. As the result, the
	call fails with Windows error 87.

2008-09-17	The InnoDB Team

	* mysql-test/innodb.result, mysql-test/innodb-zip.result,
	mysql-test/innodb-zip.test, mysql-test/innodb.test,
	ibuf/ibuf0ibuf.c, dict/dict0crea.c, dict/dict0load.c, dict/dict0boot.c,
	include/dict0dict.h, include/trx0trx.h,
	dict/dict0dict.c, trx/trx0trx.c,
	include/ha_prototypes.h, handler/ha_innodb.cc:
	When creating an index in innodb_strict_mode, check that the
	maximum record size will never exceed the B-tree page size limit.